[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyshm"
version = "0.0.7"
authors = [
  { name="Amirhossein Moallemi", email="amirhmoallemi@gmail.com" },
  { name="Seyed Ahmad Mirsalari", email="seyedahmad.mirsalar2@unibo.it"}, 
  { name="Amirhossein Kiamarzi", email="amirhossein.kiamarz2@unibo.it"},
]
description = "Unsupervised lightweight Anomaly Detection approaches for SHM systems."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]